--- a/Origen.HTML
+++ b/Origen.HTML
@@ -9,9 +9,10 @@
 <body>
 
   <header>
+     <img src="IMAGENES/blog-de-uvas-high-resolution-logo-grayscale-transparent.png" alt="Logo">
     <h1>El Origen de las Uvas</h1>
     <nav>
-    <ul><li><a href="/uvas.HTML">Inicio</a></li>
+    <ul><li><a href="/index.html">Inicio</a></li>
     </ul>
   </nav>
   </header>
