--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 <body>
     <header>
-        <img src="IMAGENES/istockphoto-1193509550-612x612.jpg" alt="Logo">
+        <img src="IMAGENES/blog-de-uvas-high-resolution-logo-grayscale-transparent.png" alt="Logo">
         <nav>
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="/Origen.HTML">Origen</a></li>
                 <li><a href="Cosecha">Cosecha</a></li>
-                <li><a href="#galeria">Galería</a></li>
+                <li><a href="/galeria1.html">Galería</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
