--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <nav>
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
-                <li><a href="/Origen.HTML">Origen</a></li>
+                <li><a href="Origen.html">Origen</a></li>
                 <li><a href="Cosecha">Cosecha</a></li>
-                <li><a href="/galeria1.html">Galería</a></li>
+                <li><a href="galeria1.html">Galería</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
