--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <nav>
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
-                <li><a href="Origen.html">Origen</a></li>
-                <li><a href="Cosecha">Cosecha</a></li>
+                <li><a href="origen.html">Origen</a></li>
+                <li><a href="cosecha.html">Cosecha</a></li>
                 <li><a href="galeria1.html">Galería</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
@@ -101,6 +101,7 @@
             <textarea placeholder="Escribe tu mensaje..." required></textarea>
             <button type="submit"><li>Enviar</li></button>
         </form>
+        
     </section>
 
     
