--- a/galeria1.html
+++ b/galeria1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeria</title>
-    <link rel="stylesheet" href="/CSS/galeria1.css">
+    <link rel="stylesheet" href="CSS/galeria1.css">
 </head>
 
 <body>
@@ -14,21 +14,21 @@
         <h1>Mi Galería</h1>
         <nav>
             <ul>
-                <li><a href="/index.html">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
             </ul>
         </nav>
     </header>
     <div class="galeria">
-        <img src="/IMAGENES/1220EIOLIGrapes_SC--SPANISH.jpg" alt="Imagen 1"class="img-mini">
-        <img src="/IMAGENES/1757503172_Italia-Regina-Red-Globe-Victoria-¿Que-variedad-de-uvas-elegir.jpg"
+        <img src="IMAGENES/1220EIOLIGrapes_SC--SPANISH.jpg" alt="Imagen 1"class="img-mini">
+        <img src="IMAGENES/1757503172_Italia-Regina-Red-Globe-Victoria-¿Que-variedad-de-uvas-elegir.jpg"
             alt="Imagen 2" class="img-mini">
-        <img src="/IMAGENES/baskets-with-different-types-of-grapes-on-a-superm-2023-11-27-05-28-08-utc.jpg"
+        <img src="IMAGENES/baskets-with-different-types-of-grapes-on-a-superm-2023-11-27-05-28-08-utc.jpg"
             alt="Imagen 3" class="img-mini">
-        <img src="/IMAGENES/beneficios-de-la-uva_61017 (1).webp" alt="Imagen 4" class="img-mini">
-        <img src="/IMAGENES/beneficios-de-la-uva_61017.webp" alt="Imagen 5" class="img-mini">
-        <img src="/IMAGENES/clones-de-uva-mas-importantes-en-el-cielo-387792_800x.webp" alt="Imagen 6" class="img-mini">
-        <img src="/IMAGENES/depositphotos_307515454-stock-photo-red-grapes-vineyard-sunset.jpg" alt="Imagen7" class="img-mini">
-        <img src="/IMAGENES/ENVERO__V7J0206-scaled.jpg" alt="Imagen8" class="img-mini">
+        <img src="IMAGENES/beneficios-de-la-uva_61017 (1).webp" alt="Imagen 4" class="img-mini">
+        <img src="IMAGENES/beneficios-de-la-uva_61017.webp" alt="Imagen 5" class="img-mini">
+        <img src="IMAGENES/clones-de-uva-mas-importantes-en-el-cielo-387792_800x.webp" alt="Imagen 6" class="img-mini">
+        <img src="IMAGENES/depositphotos_307515454-stock-photo-red-grapes-vineyard-sunset.jpg" alt="Imagen7" class="img-mini">
+        <img src="IMAGENES/ENVERO__V7J0206-scaled.jpg" alt="Imagen8" class="img-mini">
     </div>
     <div class="lightbox" id="lightbox">
         <span class="cerrar" id="cerrar">&times;</span>
