--- a/galeria1.html
+++ b/galeria1.html
@@ -35,7 +35,7 @@
         <img class="lightbox-img" id="lightbox-img" src="">
     </div>
 
-    <script src="/JS/script.js"></script>
+    <script src="JS/script.js"></script>
     <div class="caja-inferior">
         <h2>UVAS</h2>
         <p>1. Un legado milenario: La uva en la historia y la cultura
